--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,8 +7,7 @@
     <meta name="theme-color" content="#fff" />
     <meta
       name="description"
-      content="Your free movie website search is over. With Netflixo you can watch free movies online and TV shows without any account.
-       Netflixo is website template created using React and Tailwind by ZPUNET"
+      content="Your free movie website search is over. With T2CY you can watch free movies online and TV shows without any account."
     />
     <meta
       property="og:image"
@@ -16,7 +15,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Moviesapp</title>
+    <title>T2CY | Watch And Download Film Free</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
